# EEG-horror-game

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  README.md  ROADMAP.md  docker-compose.yml  pyproject.toml  requirements-vertex.txt  requirements.txt  sample_eeg_chunk.json
docs/: CREDENTIALS_SETUP.md
engine/: __init__.py  config.py  main.py  schemas.py
engine/api/: eeg.py  health.py  sessions.py
engine/eeg/: __init__.py  affect.py  bands.py  simulator.py
engine/experience/: __init__.py  orchestrator.py  state.py
engine/generative/: __init__.py  base.py  mock.py  pipeline.py  vertex.py
scripts/: cloudshell_verify.sh  demo_loop.py  verify_vertex.py
tests/: test_affect.py  test_api.py  test_pipeline.py
