[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "eeg-horror-engine"
version = "0.1.0"
description = "Adaptive horror-experience engine driven by live EEG affect signals."
requires-python = ">=3.11"
readme = "README.md"

[tool.setuptools.packages.find]
include = ["engine*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
